# cto-cameras

./: .gitignore  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README.md  SYSTEM_RUNNING.md
.github/workflows/: build.yaml
manifests/: argocd-application.yaml  configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml.example  secrets.yaml.example
scripts/: find-cameras.sh  test-rtsp.sh
services/camera-recorder/: Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.local  README.md  build.sh  config.example.toml
services/camera-recorder/src/: config.rs  health.rs  main.rs
services/camera-recorder/src/camera/: ffmpeg.rs  mod.rs  recorder.rs
services/camera-recorder/src/metrics/: mod.rs  server.rs
services/camera-recorder/src/storage/: mod.rs  s3_client.rs  uploader.rs
services/playback-server/: server.py  simple-server.py
