[package]
name = "camera-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# HTTP client for S3
reqwest = { version = "0.12", features = ["json", "stream"] }
aws-sdk-s3 = "1.70"
aws-config = "1.5"
aws-credential-types = "1.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Metrics
prometheus = "0.13"
lazy_static = "1.5"
axum = "0.7"

# Time handling
chrono = "0.4"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Parsing
regex = "1.11"

[dev-dependencies]
tempfile = "3.14"
